k8s/gateway-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: gateway
  labels: { app: gateway }
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.origemite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
